--- a/learn-m365-pr/paths/troubleshoot-windows-client-operating-system-apps/index.yml
+++ b/learn-m365-pr/paths/troubleshoot-windows-client-operating-system-apps/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.troubleshoot-windows-client-operating-system-apps
 metadata:
-  title: Troubleshoot the Windows client operating system and apps
-  description: Troubleshoot the Windows client operating system and apps
-  ms.date: 06/01/2022
+  title: MD-100 Troubleshoot the Windows client operating system and apps
+  description: MD-100 Troubleshoot the Windows client operating system and apps
+  ms.date: 07/26/2022
   author: wwlpublish
-  ms.author: brhinkel
+  ms.author: rstearman
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Troubleshoot the Windows client operating system and apps
+title: MD-100 Troubleshoot the Windows client operating system and apps
 prerequisites: |
   - Students should have a basic understanding of computer networks and hardware concepts.
   - Students should have a basic understanding of OS and Application concepts.
