--- a/learn-m365-pr/paths/manage-security-windows/index.yml
+++ b/learn-m365-pr/paths/manage-security-windows/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.manage-security-windows
 metadata:
-  title: Manage Windows client security
-  description: Manage Windows client security
-  ms.date: 06/23/2022
+  title: MD-101 Manage Windows client security
+  description: MD-101 Manage Windows client security
+  ms.date: 07/26/2022
   author: wwlpublish
-  ms.author: brhinkel
+  ms.author: rstearman
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Manage Windows client security
+title: MD-101 Manage Windows client security
 prerequisites: |
   - Strong technical skills installing, maintaining, and troubleshooting the Windows 10 OS or later
   - Strong understanding of computer networking, client security, and application concepts
