--- a/learn-m365-pr/paths/explore-application-management/index.yml
+++ b/learn-m365-pr/paths/explore-application-management/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.explore-application-management
 metadata:
   title: MD-101 Explore application management
   description: MD-101 Explore application management
-  ms.date: 07/26/2022
+  ms.date: 07/27/2022
   author: wwlpublish
   ms.author: rstearman
   ms.topic: interactive-tutorial
@@ -14,7 +14,7 @@ prerequisites: |
   - Strong understanding of computer networking, client security, and application concepts
   - Experience using Active Directory Domain Services
 summary: |
-  Students will examine application management methods using on-premise and cloud-based solutions.
+  Students will examine application management methods using on-premises and cloud-based solutions.
 iconUrl: /learn/achievements/application-explore-management.svg
 levels:
 - intermediate
