--- a/learn-m365-pr/paths/manage-recipient-objects-resources-microsoft-365/index.yml
+++ b/learn-m365-pr/paths/manage-recipient-objects-resources-microsoft-365/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.manage-recipient-objects-resources-microsoft-365
 metadata:
-  title: Manage recipient objects and resources in Microsoft 365
-  description: Manage recipient objects and resources in Microsoft 365
-  ms.date: 05/11/2022
+  title: MS-203 Manage recipient objects and resources in Microsoft 365
+  description: MS-203 Manage recipient objects and resources in Microsoft 365
+  ms.date: 07/27/2022
   author: wwlpublish
-  ms.author: tfrink
+  ms.author: maquinl
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Manage recipient objects and resources in Microsoft 365
+title: MS-203 Manage recipient objects and resources in Microsoft 365
 prerequisites: |
   This module is designed for persons who are aspiring to the Microsoft 365 Messaging Administrator role. The prerequisites for this module include:
   *   Ability to navigate the Microsoft 365 admin center, the Exchange admin center, and the Microsoft 365 Defender portal
