--- a/learn-m365-pr/paths/manage-mailbox-migrations/index.yml
+++ b/learn-m365-pr/paths/manage-mailbox-migrations/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.manage-mailbox-migrations
 metadata:
-  title: Manage mailbox migrations
-  description: Manage mailbox migrations
-  ms.date: 06/07/2022
+  title: MS-203 Manage mailbox migrations
+  description: MS-203 Manage mailbox migrations
+  ms.date: 07/27/2022
   author: wwlpublish
-  ms.author: tfrink
+  ms.author: maquinl
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Manage mailbox migrations
+title: MS-203 Manage mailbox migrations
 prerequisites: |
   This module is designed for persons who are aspiring to the Microsoft 365 Messaging Administrator role. The prerequisites for this module include:
   - Ability to navigate the Microsoft 365 admin center, the Exchange admin center, and the Microsoft 365 Defender portal
