--- a/learn-m365-pr/paths/prepare-environment-for-microsoft-teams-deployment/index.yml
+++ b/learn-m365-pr/paths/prepare-environment-for-microsoft-teams-deployment/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:LearningPath
 uid: learn.wwl.prepare-environment-for-microsoft-teams-deployment
 metadata:
-  title: Prepare the environment for a Microsoft Teams deployment
-  description: Prepare the environment for a Microsoft Teams deployment
-  ms.date: 09/28/2021
+  title: MS-700 Prepare the environment for a Microsoft Teams deployment
+  description: MS-700 Prepare the environment for a Microsoft Teams deployment
+  ms.date: 07/28/2022
   author: wwlpublish
   ms.author: jennyche
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Prepare the environment for a Microsoft Teams deployment
+title: MS-700 Prepare the environment for a Microsoft Teams deployment
 prerequisites: |
   - A proficient understanding of basic functional experience with Microsoft 365 services.
   - A proficient understanding of general IT practices, including using PowerShell.
@@ -23,13 +23,12 @@ products:
 - m365
 - office-teams
 subjects:
-- identity-access
 - communication
+- identity-access
 modules:
 - learn.wwl.manage-access-for-external-users
 - learn.wwl.implement-security-for-microsoft-teams
 - learn.wwl.implement-compliance-for-microsoft-teams
-- learn.wwl.transition-from-skype-for-business-to-microsoft-teams
 - learn.wwl.plan-configure-network-settings-for-microsoft-teams
 trophy:
   uid: learn.wwl.prepare-environment-for-microsoft-teams-deployment.trophy
