changed files by pdets auto publish service, publishid[fa695e17-031c-4e78-ac60-e791b272dab5] and do [publish].

--- a/learn-m365-pr/wwl/update-clients-use-windows-update-business/index.yml
+++ b/learn-m365-pr/wwl/update-clients-use-windows-update-business/index.yml
@@ -11,10 +11,10 @@ metadata:
 title: Update clients using Windows Update for Business
 summary: Leverage Windows Update for Business to control the distribution and methods for Windows update delivery.
 abstract: |
-  After completing this module, you will be able to:
-  - Describe Windows Update for Business.
-  - Configure Windows Update for Business.
-  - Identify scenarios for using Windows Update for Business.
+  After completing this module, you'll be able to:
+  *   Describe Windows Update for Business.
+  *   Configure Windows Update for Business.
+  *   Identify scenarios for using Windows Update for Business.
 prerequisites: |
   - Strong technical skills installing, maintaining, and troubleshooting the Windows 10 OS or later
   - Strong understanding of computer networking, client security, and application concepts
