changed files by pdets auto publish service, publishid[809c4d0b-3fd8-4cbc-a6f3-dd8c276f86ca] and do [publish].

--- a/learn-m365-pr/paths/plan-configure-teams-voice/index.yml
+++ b/learn-m365-pr/paths/plan-configure-teams-voice/index.yml
@@ -14,7 +14,7 @@ prerequisites: |
   - Learners should have completed the
   [Microsoft 365 Certified: Teams Administrator Associate](/learn/certifications/m365-teams-administrator-associate/) or have equivalent experience.
 summary: |
-  You will learn how to plan for and configure Teams Phone, including Calling Plans, Direct Routing, Auto Attendants, Call Queues, Operator Connect, and how to extend Teams Phone with additional services.
+  You‘ll learn how to plan for and configure Teams Phone, including Calling Plans, Direct Routing, Auto Attendants, Call Queues, Operator Connect, and how to extend Teams Phone with additional services.
 iconUrl: /learn/achievements/plan-and-configure-teams-voice.svg
 levels:
 - advanced
